# 22_PC_GDPS_RESTORE

./: .gitignore  README.md
22_PC_GDPS_MAIN/: CMakeLists.txt  CMakeSettings.json  verInf.rc
22_PC_GDPS_MAIN/src/: 22_PC_GDPS_MAIN.cpp  22_PC_GDPS_MAIN.h  FakeLevelSelectLayerLol.cpp  FakeLevelSelectLayerLol.hpp  GameLayers.cpp  Gameplay.cpp  Gameplay.hpp  LevelAreaInnerLayer.cpp  LevelEditor.cpp  LevelEditor.hpp  ObjectSetupPopups.cpp  ObjectSetupPopups.hpp  Objects.cpp  customLayerxd.cpp  customLayerxd.hpp
22_PC_GDPS_MAIN/src/ALLOCCONSOLEA/: Source1.cpp
22_PC_GDPS_MAIN/src/FREE_FLY_MODE/: FREE_FLY_MODE.cpp
22_PC_GDPS_MAIN/src/FUSES/: Source1.cpp
22_PC_GDPS_MAIN/src/GAREGE_LAYER_EXT/: LevelAreaInnerLayer.cpp  _GaregeLayerExt.cpp
22_PC_GDPS_MAIN/src/HACKS/: HACKS.cpp
22_PC_GDPS_MAIN/src/KEYS_LAYER_EXT/: KEYS_LAYER_EXT.cpp
22_PC_GDPS_MAIN/src/LOAD_RESOURCES/: LOAD_RESOURCES.cpp
22_PC_GDPS_MAIN/src/PLAT/: PLAT.cpp  PLAT.cpp-dev  main_NEW.cpp
22_PC_GDPS_MAIN/src/SAI_STUFF_CONTROLLER/: Source1.cpp
22_PC_GDPS_MAIN/src/SOCIALBTNS/: SOCIALBTNS.cpp
22_PC_GDPS_MAIN/src/THE_SAFE_BTN/: THE_SAFE_BTN.cpp
22_PC_GDPS_MAIN/src/TRIGGERS/: TRIGGERS.cpp
22_PC_GDPS_MAIN/src/VERSION_CHECKER/: VERSION_CHECKER.cpp
22_PC_GDPS_MAIN/src/_OBJECTS/DECOBLOCKY/: DECOBLOCKY.cpp
22_PC_GDPS_MAIN/src/_OBJECTS/GREEN_PORTALE/: GREEN_PORTALE.cpp
22_PC_GDPS_MAIN/src/_OBJECTS/SPIDER_ORB_N_PAD/: SPIDER_ORB_N_PAD.cpp
22_PC_GDPS_MAIN/src/_OBJECTS/TRIGGERS/: TRIGGERS.cpp
22_PC_GDPS_MAIN/src/_UI/GAREGE_LAYER_EXT/: EventLevelPage.cpp  EventLevelPage.hpp  LevelAreaInnerLayer.cpp  LevelAreaLayer.cpp  _GaregeLayerExt.cpp
22_PC_GDPS_MAIN/src/_UI/KEYS_LAYER_EXT/: KEYS_LAYER_EXT.cpp
22_PC_GDPS_MAIN/src/_UI/SOCIALBTNS/: SOCIALBTNS.cpp
22_PC_GDPS_MAIN/src/_UI/SUPPORT_LAYER_EXT/: SUPPORT_LAYER_EXT.cpp
22_PC_GDPS_MAIN/src/_UI/THE_SAFE_BTN/: THE_SAFE_BTN.cpp
22_PC_GDPS_MAIN/src/_UI/VERSION_CHECKER/: VERSION_CHECKER.cpp
curly-eureka/: hooks.cpp
curly-eureka/gd.h/achievement_nodes/: AchievementNotifier.h
gdPlatformerMode-main/: CMakeLists.txt  main_NEW.cpp  verInf.rc
gdPlatformerMode-main/geode/release/: user95401.gdPlatformerMode.geode
